<resources>
    <string name="app_name">Calculator_wy</string>

    <string name="zero">0</string>
    <string name="doubleZero">00</string>
    <string name="tripleZero">000</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="divide">÷</string>
    <string name="multiple">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">없음</string>
    <string name="equals">=</string>
    <string name="backspace">&lt;-</string>
    <string name="display">0</string>
    <string name="percentBTN">%</string>
    <string name="result"></string>

</resources>
