<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/backBTN"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="83dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/btn_circle"
        android:backgroundTint="#FE9A2E"
        android:onClick="backBTN"
        android:text="@string/backspace"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:backgroundTint="#F5A9A9"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="#FF4000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/pmBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:backgroundTint="#08298A"
                android:text="@string/plusMinus"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/percentBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:backgroundTint="#08298A"
                android:text="@string/percentBTN"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/divideBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:backgroundTint="#FE9A2E"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eightBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/noneBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/multipleBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:backgroundTint="#FE9A2E"
                android:onClick="multipleBTN"
                android:text="@string/multiple"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/sixBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/subtractBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:backgroundTint="#FE9A2E"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/twoBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/threeBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/addBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:backgroundTint="#FE9A2E"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zeroBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/doubleZeroBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="doubleZeroBTN"
                android:text="@string/doubleZero"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/tripleZeroBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/btn_circle"
                android:onClick="tripleZeroBTN"
                android:text="@string/tripleZero"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/equalsBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:backgroundTint="#43A047"
                android:onClick="clearBTN"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="182dp"
        android:autofillHints="0"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:maxLines="4"
        android:scrollHorizontally="false"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="408dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:text="result"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>